# rust-workshop

./: Cargo.toml  PULL_REQUEST_TEMPLATE.md  README.md
src/: ex_1.rs  ex_2.rs  main.rs
src/chars_bool_and_unit/: ex_1.rs  ex_2.rs  ex_3.rs  ex_4.rs  ex_5.rs  ex_6.rs  mod.rs
src/compound_types/: ex_1.rs  ex_10.rs  ex_11.rs  ex_12.rs  ex_2.rs  ex_3.rs  ex_4.rs  ex_5.rs  ex_6.rs  ex_7.rs  ex_8.rs  ex_9.rs  mod.rs
src/exercises/: ex_1.rs  ex_2.rs  ex_3.rs  ex_4.rs  ex_5.rs  ex_6.rs  ex_7.rs  mod.rs
src/functions/: ex_1.rs  ex_2.rs  ex_3.rs  ex_4.rs  ex_5.rs  mod.rs
src/integers/: ex_1.rs  ex_2.rs  ex_3.rs  ex_4.rs  ex_5.rs  ex_6.rs
src/ownership/: ex_1.rs  ex_2.rs  ex_3.rs  ex_4.rs  ex_5.rs  ex_6.rs  ex_7.rs  ex_8.rs  ex_9.rs  mod.rs
src/ownership_and_borrowing/: ex_1.rs  mod.rs
src/referencing_and_borrowing/: ex_1.rs  ex_10.rs  ex_11.rs  ex_2.rs  ex_3.rs  ex_4.rs  ex_5.rs  ex_6.rs  ex_7.rs  ex_8.rs  ex_9.rs  mod.rs
src/statements_and_expressions/: ex_1.rs  ex_2.rs  ex_3.rs  mod.rs
src/student_registry_project/: README.md  assignment-1.md  ex_1.rs  mod.rs
src/student_registry_v2/: Cargo.toml
src/student_registry_v2/src/: main.rs
src/student_registry_v2/src/implementations/: attendance.rs  course.rs  course_registry.rs  mod.rs  student.rs  student_registry.rs
src/student_registry_v2/src/routes/: course.rs  mod.rs  routes_handler.rs  student.rs
src/student_registry_v2/src/types/: attendance.rs  attendance_struct.rs  course.rs  course_registry.rs  student.rs  student_registry.rs
src/student_registry_v2/src/utils/: mod.rs
(+38 files in other folders)
