[package]
name = "solving_practice_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#axum
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }

#postgres
sqlx = {version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros"]}

#serde
serde = { version = "1.0.195", features = ["derive"] }
serde_json = {version = "1.0.111"}

dotenvy = "0.15"
uuid = "1"
jsonwebtoken = "8"
argon2 = "0.5.3"
chrono = "0.4.19"