[package]
name = "student_registry_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
tokio =  { version = "1.39.2", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
serde = { version = "1.0.210", features = ["derive"] }
